@@ -229,8 +229,8 @@ sub _indexed_dist
     my $payload = YAML::Tiny->read_string($data);
 
     $self->log_debug('invalid payload returned?'), return undef unless $payload;
-    $self->log_debug([ '%s not indexed', $module ]), return undef if not defined $payload->[0]{dist_name};
-    return CPAN::DistnameInfo->new($payload->[0]{dist_name})->dist;
+    $self->log_debug([ '%s not indexed', $module ]), return undef if not defined $payload->[0]{distfile};
+    return CPAN::DistnameInfo->new($payload->[0]{distfile})->dist;
 }
 
 __PACKAGE__->meta->make_immutable;
